# candle-ng

./: Dockerfile  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: pre-commit.yml
candle/: __init__.py  api.py  config.py  models.py  utils.py
candle/api/: api.py
candle/auth/: auth.py
candle/common/: frontend.py
candle/common/static/css/: dark.css  main.css
candle/common/templates/: search.html
candle/common/templates/main/: base.html  first_row.html  head.html
candle/entities/room/: room.py
candle/entities/student_group/: student_group.py
candle/entities/subject/: subject.py
candle/entities/teacher/: teacher.py
candle/groups/: api.py  frontend.py  models.py  search.py
candle/groups/templates/groups/: listing.html
candle/main/static/css/: main.css
candle/main/templates/main/: head.html
candle/my_timetable/: my_timetable.py
candle/my_timetable/static/: my_timetable.js
candle/panel/: panel.py
candle/panel/templates/panel/: panel.html
candle/rooms/: api.py  frontend.py  models.py  search.py
candle/rooms/templates/rooms/: listing.html
candle/search/: search.py
candle/search/static/: search.js
candle/subjects/: api.py  frontend.py  models.py  search.py
candle/teachers/: api.py  frontend.py  models.py  search.py
candle/timetable/: export.py  layout.py  layout_component.py  placed_lesson.py  render.py  timetable.py  utils.py
candle/timetable/blueprints/: readonly.py
requirements/: dev_requirements.txt  requirements.in  requirements.txt
tests/: conftest.py  helpers.py  test_lists.py  test_timetable.py
(+9 files in other folders)
