[tool.poetry]
name = "candle-ng"
version = "0.1.0"
description = "New generation timetable viewer."
authors = ["ŠVT FMFI <fmfi-svt@googlegroups.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-debugtoolbar = "^0.13.1"
flask-sqlalchemy = "^3.1.0"
unidecode = "^1.3.6"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
icalendar = "^5.0.7"
cryptography = "^41.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
beautifulsoup4 = "^4.12.2"
black = "^23.9.1"
ruff = "^0.0.288"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
